fix: Final layout issues

--- a/src/niall-paterson/partials/_layout.scss
+++ b/src/niall-paterson/partials/_layout.scss
@@ -1,9 +1,9 @@
-h1, h2, p {
+h1, h2, p, #languages-icon-wrapper {
   display: inline-block;
   margin: $small-margin;
 }
 
-p {
+#about-content p, .project-wrapper p {
   margin-top: 0;
 }
 
