--- a/src/niall-paterson/partials/_queries.scss
+++ b/src/niall-paterson/partials/_queries.scss
@@ -1,12 +1,12 @@
 @media (min-width: $breakpoint-tablet) {
-  h1, h2, p {
+  h1, h2, p, #languages-icon-wrapper {
     margin: $medium-margin;
     width: $medium-width;
   }
 
-  p {
+  #about-content p, .project-wrapper p {
     margin-top: 0;
-  }  
+  }
   
   #fixed-header {
     div {
